--- a/index.html
+++ b/index.html
@@ -149,28 +149,30 @@
                 <div class="contenedor">
 
                     <font size="4">
-
+                        
                         <h2> Contactanos </h2>
 
                     </font>
-                    <form action="#">
-                        <label for="nombre">Nombre:</label>
-                        <input type="text" name="Nombre_usuario" id="nombre" minlength="3" maxlength="30" required>
-                        <label for="Correo"> Correo: </label>
-                        <input type="email" name="Correo_usuario" id="Correo">
-                        <label for="telefono"> Celular: </label>
-                        <input type="tel" name="telefono" id="telefono">
-                        <label for="mensaje">Deja tu comentario: </label>
-                        <textarea name="mensaje" id="mensaje" rows="4"> </textarea>
-                        <label for="nacionalidad"> Selecciona tu pais: </label>
-                        <select name="" id="">
-                    <option value=""> Seleccione un pais</option>
-                    <option value="cO"> Colombia</option>
-                    <option value="ve"> venezuela</option>
-                    <option value="me"> mexico</option>
-                    <option value="ar"> argentina</option>
-                    <option value="es"> españa</option>
-                 </select>
+
+                       <form id="contacto" action="#">
+                            <label for="nombre">Nombre:</label>
+                            <input type="text" name="Nombre_usuario" id="nombre" minlength="3" maxlength= "30" required> 
+                            <label for="Correo"> Correo: </label>
+                            <input type="email" name="Correo_usuario" id="Correo"> 
+                            <label for="telefono"> Celular: </label>
+                            <input type="tel" name="telefono" id="telefono" >
+                            <label for="mensaje">Deja tu comentario: </label>
+                            <textarea name="mensaje" id="mensaje" rows="4"> </textarea>
+                             <label for="nacionalidad"> selecciona tu pais: </label>
+                             <select name="" id="nacionalidad">
+                                <option value=""> Seleccione un pais</option>
+                                <option value="cO"> Colombia</option>
+                                <option value="ve"> venezuela</option>
+                                <option value="me"> mexico</option>
+                                <option value="ar"> argentina</option>
+                                <option value="es"> españa</option>
+                             </select>
+
 
                         <input type="submit" value="Enviar Informacion">
 
@@ -190,4 +192,5 @@
         </font>
         <footer> </footer>
         <script src="./script.js"> </script>
+
         </body
